--- a/css/output.css
+++ b/css/output.css
@@ -94,16 +94,9 @@ legend {
   display: block;
 }
 
-.footer__copyright, .condition__text, .other-auction__heading, .auction__card-title, .heading, .main__title {
-  font-weight: 400;
-}
-
-.new-stickers .slider__nav-button, .other-auction__button, .auction__button, .main__button-author, .main__button-buy, .header__button, .footer .navbar__link, .header .navbar__link, .condition__heading, .other-auction .card__time, .other-auction .card__price, .other-auction .card__title, .other-auction .card__user-name, .auction__clock-num, .auction__clock-text, .auction__time-text, .auction__dollar, .auction__crypto, .auction__price-text, .auction__user-name, .auction__live-text {
-  font-weight: 700;
-}
-
 .main__title {
   font-family: "Russo One";
+  font-weight: 400;
   font-style: normal;
   font-size: 35px;
   color: white;
@@ -116,6 +109,7 @@ legend {
 
 .heading {
   font-family: "Russo One";
+  font-weight: 400;
   font-style: normal;
   font-size: 30px;
   color: #070608;
@@ -128,6 +122,7 @@ legend {
 
 .auction__live-text {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   font-size: 12px;
   color: #d13130;
@@ -140,6 +135,7 @@ legend {
 
 .auction__user-name {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   font-size: 16px;
   color: #070608;
@@ -152,6 +148,7 @@ legend {
 
 .auction__card-title {
   font-family: "Muller";
+  font-weight: 400;
   font-style: normal;
   font-size: 30px;
   color: #070608;
@@ -164,6 +161,7 @@ legend {
 
 .auction__price-text {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   font-size: 16px;
   color: #070608;
@@ -176,6 +174,7 @@ legend {
 
 .auction__crypto {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   font-size: 30px;
   color: #070608;
@@ -188,6 +187,7 @@ legend {
 
 .auction__dollar {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   font-size: 16px;
   color: #95959d;
@@ -200,6 +200,7 @@ legend {
 
 .auction__clock-text, .auction__time-text {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   font-size: 16px;
   color: white;
@@ -212,6 +213,7 @@ legend {
 
 .auction__clock-num {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   font-size: 30px;
   color: white;
@@ -224,6 +226,7 @@ legend {
 
 .other-auction__heading {
   font-family: "Russo One";
+  font-weight: 400;
   font-style: normal;
   font-size: 20px;
   color: #070608;
@@ -231,6 +234,7 @@ legend {
 
 .other-auction .card__user-name {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   font-size: 16px;
   color: white;
@@ -238,6 +242,7 @@ legend {
 
 .other-auction .card__title {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   font-size: 20px;
   color: white;
@@ -245,6 +250,7 @@ legend {
 
 .other-auction .card__price {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   font-size: 20px;
   color: #46f4db;
@@ -252,13 +258,49 @@ legend {
 
 .other-auction .card__time {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   font-size: 16px;
   color: #95959d;
 }
 
+.best-sellers .card__user-name {
+  font-family: "Muller";
+  font-weight: 700;
+  font-style: normal;
+  font-size: 16px;
+  color: #070608;
+}
+
+.best-sellers .card__title {
+  font-family: "Muller";
+  font-weight: 700;
+  font-style: normal;
+  font-size: 20px;
+  color: #070608;
+}
+@media only screen and (min-width: 1024px) {
+  .best-sellers .card__title {
+    font-size: 48px;
+  }
+}
+
+.best-sellers .card__price {
+  font-family: "Muller";
+  font-weight: 700;
+  font-style: normal;
+  font-size: 12px;
+  color: #070608;
+}
+@media only screen and (min-width: 1024px) {
+  .best-sellers .card__price {
+    font-size: 20px;
+  }
+}
+
 .condition__heading {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   font-size: 20px;
   color: white;
@@ -271,6 +313,7 @@ legend {
 
 .condition__text {
   font-family: "Muller";
+  font-weight: 400;
   font-style: normal;
   font-size: 16px;
   color: white;
@@ -283,6 +326,7 @@ legend {
 
 .footer__copyright {
   font-family: "Muller";
+  font-weight: 400;
   font-style: normal;
   font-size: 12px;
   color: #ededf2;
@@ -290,6 +334,7 @@ legend {
 
 .header .navbar__link {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   color: #070608;
   font-size: 16px;
@@ -308,6 +353,7 @@ legend {
 
 .footer .navbar__link {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   color: #070608;
   font-size: 16px;
@@ -326,6 +372,7 @@ legend {
 
 .header__button {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   color: white;
   font-size: 16px;
@@ -352,6 +399,7 @@ legend {
 
 .main__button-buy {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   color: #070608;
   font-size: 16px;
@@ -383,6 +431,7 @@ legend {
 
 .main__button-author {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   color: white;
   font-size: 16px;
@@ -414,6 +463,7 @@ legend {
 
 .auction__button {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   color: #070608;
   font-size: 16px;
@@ -445,6 +495,7 @@ legend {
 
 .other-auction__button {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   color: #070608;
   font-size: 20px;
@@ -471,6 +522,7 @@ legend {
 
 .new-stickers .slider__nav-button {
   font-family: "Muller";
+  font-weight: 700;
   font-style: normal;
   color: white;
   font-size: 12px;
@@ -560,7 +612,7 @@ legend {
 .header__bar {
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  border-color: #c4c4c4;
+  border-bottom-color: #c4c4c4;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -570,12 +622,10 @@ legend {
 @media only screen and (min-width: 1024px) {
   .header__bar {
     border-bottom-width: 0;
-    border-bottom-style: solid;
     padding-top: 15px;
     padding-bottom: 15px;
     display: flex;
-    justify-content: FLEX-START;
-    align-items: center;
+    justify-content: flex-start;
   }
 }
 .header__bar .navbar {
@@ -627,8 +677,6 @@ legend {
 @media only screen and (min-width: 1024px) {
   .header .navbar__list {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     gap: 32px;
   }
 }
@@ -660,7 +708,7 @@ legend {
 .main__buttons {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  justify-content: flex-start;
   align-items: flex-start;
   gap: 16px;
   padding-bottom: 64px;
@@ -668,7 +716,8 @@ legend {
 @media only screen and (min-width: 1024px) {
   .main__buttons {
     display: flex;
-    flex-direction: ROW;
+    flex-direction: row;
+    align-items: center;
     gap: 32px;
     padding-bottom: 160px;
   }
@@ -751,7 +800,6 @@ legend {
 @media only screen and (min-width: 1024px) {
   .auction__bar {
     display: flex;
-    align-items: center;
     gap: 16px;
   }
 }
@@ -782,7 +830,6 @@ legend {
 @media only screen and (min-width: 1024px) {
   .auction__live-text {
     display: flex;
-    align-items: center;
     gap: 5.5px;
   }
 }
@@ -798,16 +845,11 @@ legend {
 .auction__card-content {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  align-items: flex-start;
   gap: 16px;
 }
 @media only screen and (min-width: 1024px) {
   .auction__card-content {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    align-items: flex-start;
     gap: 32px;
   }
 }
@@ -840,8 +882,6 @@ legend {
     width: 228px;
     height: 70px;
     display: flex;
-    justify-content: center;
-    align-items: center;
     gap: 16px;
     border-radius: 23px;
   }
@@ -862,25 +902,18 @@ legend {
 .auction__price-time {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  align-items: flex-start;
   gap: 16px;
 }
 @media only screen and (min-width: 1024px) {
   .auction__price-time {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    align-items: flex-start;
     gap: 32px;
   }
 }
 @media only screen and (min-width: 1920px) {
   .auction__price-time {
     display: flex;
-    flex-direction: ROW;
-    align-items: flex-start;
-    gap: 32px;
+    flex-direction: row;
   }
 }
 .auction__price {
@@ -904,8 +937,6 @@ legend {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  align-items: flex-start;
   gap: 16px;
 }
 @media only screen and (min-width: 1024px) {
@@ -940,8 +971,6 @@ legend {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  align-items: flex-start;
   gap: 16px;
   padding-left: 16px;
   padding-right: 16px;
@@ -1067,8 +1096,6 @@ legend {
     width: 952px;
     height: fit-content;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     flex-wrap: wrap;
     gap: 32px;
   }
@@ -1164,7 +1191,6 @@ legend {
 @media only screen and (min-width: 1024px) {
   .new-stickers__heading {
     display: flex;
-    align-items: center;
     gap: 16px;
   }
 }
@@ -1275,77 +1301,149 @@ legend {
   border-color: #d13130;
 }
 
-.footer {
-  background-color: #46f4db;
-}
-.footer__logo {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  width: 75px;
-  height: 30px;
+.best-sellers {
+  background-color: #070608;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 @media only screen and (min-width: 1024px) {
-  .footer__logo {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    width: 100px;
-    height: 40px;
+  .best-sellers {
+    padding-top: 90px;
+    padding-bottom: 90px;
   }
 }
-.footer__content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.best-sellers__heading {
+  color: white;
+  margin-bottom: 16px;
 }
 @media only screen and (min-width: 1024px) {
-  .footer__content {
-    display: flex;
-    flex-direction: ROW;
-    justify-content: space-between;
-    padding-top: 20px;
-    padding-bottom: 20px;
+  .best-sellers__heading {
+    margin-bottom: 32px;
   }
 }
-.footer .navbar__list {
+.best-sellers__cards {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border-top-width: 1px;
-  border-top-style: solid;
-  border-color: #070608;
-  width: 300px;
-  height: fit-content;
+  flex-wrap: wrap;
+  gap: 16px;
 }
 @media only screen and (min-width: 1024px) {
-  .footer .navbar__list {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    border-top-width: 0px;
-    border-top-style: solid;
-    width: 320px;
-    height: fit-content;
+  .best-sellers__cards {
+    display: flex;
+    gap: 0px;
   }
 }
-.footer__black {
-  background-color: #070608;
-}
-.footer__copyright {
-  margin-left: 120px;
-  padding-top: 8px;
-  padding-bottom: 8px;
+.best-sellers .card {
+  width: 132px;
+  height: 226px;
+  background-color: #ededf2;
+  border-radius: 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 @media only screen and (min-width: 1024px) {
-  .footer__copyright {
-    margin-left: 436px;
+  .best-sellers .card {
+    width: 460px;
+    height: 174px;
+    display: flex;
+    flex-direction: row-reverse;
+    border-radius: 40px;
+  }
+  .best-sellers .card:nth-child(3) {
+    margin-top: 32px;
+  }
+  .best-sellers .card:nth-child(4) {
+    margin-top: 32px;
+  }
+  .best-sellers .card:nth-child(5) {
+    margin-top: 32px;
+  }
+  .best-sellers .card:nth-child(6) {
+    margin-top: 32px;
   }
 }
 @media only screen and (min-width: 1920px) {
-  .footer__copyright {
-    margin-left: 600px;
+  .best-sellers .card {
+    width: 624px;
+    height: 174px;
   }
+}
+.best-sellers .card__info {
+  background-color: white;
+  width: 132px;
+  height: 118px;
+  border-radius: 0px 0px 18px 18px;
+  margin-top: auto;
+  z-index: 999;
+  padding-left: 16px;
+  padding-top: 16px;
+}
+@media only screen and (min-width: 1024px) {
+  .best-sellers .card__info {
+    width: 318px;
+    height: 174px;
+    padding-left: 32px;
+    padding-top: 32px;
+    border-radius: 0px 40px 40px 0px;
+  }
+}
+@media only screen and (min-width: 1920px) {
+  .best-sellers .card__info {
+    width: 482px;
+    height: 174px;
+  }
+}
+.best-sellers .card__img {
+  width: 108px;
+  height: 108px;
+  margin-top: 12px;
+  position: absolute;
+}
+@media only screen and (min-width: 1024px) {
+  .best-sellers .card__img {
+    margin-right: 303px;
+    margin-top: 0;
+    width: 142px;
+    height: 142px;
+  }
+}
+@media only screen and (min-width: 1920px) {
+  .best-sellers .card__img {
+    margin-right: 467px;
+  }
+}
+.best-sellers .card__user {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.best-sellers .card__title {
+  margin-top: 8px;
+  margin-bottom: 7px;
+}
+@media only screen and (min-width: 1024px) {
+  .best-sellers .card__title {
+    margin-top: 9px;
+    margin-bottom: 9px;
+  }
+}
+.best-sellers .card__price {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+}
+@media only screen and (min-width: 1024px) {
+  .best-sellers .card__price {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+}
+.best-sellers .card__dollar {
+  color: #95959d;
 }
 
 .condition {
@@ -1356,23 +1454,19 @@ legend {
 .condition__content {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  align-items: flex-start;
   gap: 32px;
 }
 @media only screen and (min-width: 1024px) {
   .condition__content {
     display: flex;
-    flex-direction: ROW;
+    flex-direction: row;
     justify-content: space-between;
-    gap: 32px;
+    align-items: center;
   }
 }
 .condition__info {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  align-items: flex-start;
   gap: 16px;
 }
 .condition__text {
@@ -1437,5 +1531,77 @@ legend {
   }
   .condition__img:nth-child(5) {
     right: 300px;
+  }
+}
+
+.footer {
+  background-color: #46f4db;
+}
+.footer__logo {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 75px;
+  height: 30px;
+}
+@media only screen and (min-width: 1024px) {
+  .footer__logo {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    width: 100px;
+    height: 40px;
+  }
+}
+.footer__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media only screen and (min-width: 1024px) {
+  .footer__content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+.footer .navbar__list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-top-width: 1px;
+  border-top-style: solid;
+  border-top-color: #070608;
+  width: 300px;
+  height: fit-content;
+}
+@media only screen and (min-width: 1024px) {
+  .footer .navbar__list {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    border-top-width: 0px;
+    width: 320px;
+    height: fit-content;
+  }
+}
+.footer__black {
+  background-color: #070608;
+}
+.footer__copyright {
+  margin-left: 120px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+@media only screen and (min-width: 1024px) {
+  .footer__copyright {
+    margin-left: 436px;
+  }
+}
+@media only screen and (min-width: 1920px) {
+  .footer__copyright {
+    margin-left: 600px;
   }
 }
